[package]
name = "incoming"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
tokio = {version = "0.2", features = ["tcp", "uds", "io-util"]}

[dev-dependencies]
tokio = {version = "0.2", features = ["tcp", "uds", "io-util", "rt-core"]}
